--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 	<title>Sigmoid | Kenya Elections 2022</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="theme-color" content="#4d5061">
+	<meta name="theme-color" content="#4d5061"> 
+	<meta name="description" content="Kenya elections 2022">
+	<meta name="keywords" content="Kenya, election, elections 2022, kenya election, Raila, Ruto, azimio, uda, presidential, candidates, counties, nairobi win, elect, vote">
 
 	<link rel="mask-icon" href="imgs/sigma.png">
 	<link rel="icon" href="imgs/sigma.png?" type="image/png">
