--- a/index.html
+++ b/index.html
@@ -118,12 +118,19 @@
 				<a href="" class="btn btn-sm btn-brand text-light">Blogs</a>
 			</div>
 		</nav>
-		<div class="ctn container">
-			<img src="imgs/home.png" alt="elections">
-			<div class="ke22">
-				<h3>KENYA</h3>
-				<h2>ELECTIONS</h2>
-				<h3>2022</h3>
+		<div class="ctn container py-5">
+			<div class ="box">
+				<div class ="img rao">
+					<img src="imgs/rao.png" alt="a">
+				</div>
+				<div class="h">
+					<h2 class ="lv">LIVE</h2>
+					<h1>ELECTIONS</h1>
+					<h2 class="yr">2<span><img src="imgs/check.png" alt="c"></span>22</h2>
+				</div>
+				<div class ="img wsr">
+					<img src="imgs/wsr.png" alt="u">
+				</div>
 			</div>
 		</div>
 	</section>
