--- a/index.html
+++ b/index.html
@@ -1160,7 +1160,7 @@
 						<h5><span class="lblother"></span>Other</h5>
 						<h5><span class="lbltie"></span>Tie</h5>
 						<h5><span class="lblpend"></span>Pending</h5>
-						<h6>*Click individual counties for results</h6>
+						<h6 class="my-2">*Click individual counties for results</h6>
 					</div>
 				</div>
 				<div class="seat"></div>
@@ -1190,7 +1190,7 @@
 		</div>
 		<div class="btm">
 			<div class="container text-light">
-				<p class="pt-3 mb-0">Copyright &copy; 2022. All Rights reserved.</p>
+				<p class="pt-3 mb-0">Azco, sigma. &copy; 2022. All Rights reserved.</p>
 			</div>
 		</div>
 	</footer>
