--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
 	<title>Sigmoid | Kenya Elections 2022</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="theme-color" content="#4d5061"> 
+	<meta name="theme-color" content="#4d5061">
 	<meta name="description" content="Kenya elections 2022">
-	<meta name="keywords" content="Kenya, election, elections 2022, kenya election, Raila, Ruto, azimio, uda, presidential, candidates, counties, nairobi win, elect, vote">
+	<meta name="keywords"
+		content="Kenya, election, elections 2022, kenya election, Raila, Ruto, azimio, uda, presidential, candidates, counties, nairobi win, elect, vote">
 
 	<link rel="mask-icon" href="imgs/sigma.png">
 	<link rel="icon" href="imgs/sigma.png?" type="image/png">
@@ -119,23 +120,24 @@
 			</div>
 		</nav>
 		<div class="ctn container py-5">
-			<div class ="box">
-				<div class ="img rao">
+			<div class="box">
+				<div class="img rao">
 					<img src="imgs/rao.png" alt="a">
 				</div>
 				<div class="h">
-					<h2 class ="lv">LIVE</h2>
+					<h2 class="lv">LIVE</h2>
 					<h1>ELECTIONS</h1>
 					<h2 class="yr">2<span><img src="imgs/check.png" alt="c"></span>22</h2>
 				</div>
-				<div class ="img wsr">
+				<div class="img wsr">
 					<img src="imgs/wsr.png" alt="u">
 				</div>
 			</div>
 		</div>
 	</section>
 	<section class="">
-		<div id="p-elect" class="flexcol my-3 container"></div>
+		<div id="p-elect" class="flexcol my-3 container">
+		</div>
 	</section>
 	<section id="progress" class=" px-2">
 		<div class="struct container">
@@ -1155,8 +1157,8 @@
 						</svg>
 					</div>
 					<div class="label">
-						<h5><span class="lblodm"></span>Raila</h5>
-						<h5><span class="lbluda"></span>Ruto</h5>
+						<h5><span class="lblodm"></span>Azimio</h5>
+						<h5><span class="lbluda"></span>UDA</h5>
 						<h5><span class="lblother"></span>Other</h5>
 						<h5><span class="lbltie"></span>Tie</h5>
 						<h5><span class="lblpend"></span>Pending</h5>
